--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0070)file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#yard-04 -->
+<!-- saved from url=(0088)file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#gate-01 -->
 <html lang="pt-br"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -44,7 +44,9 @@
       .wrap{grid-template-columns:1fr}
       nav{position:relative;top:0;max-height:none}
     }
-    </style>
+    
+    [id]{scroll-margin-top:96px}
+</style>
 </head>
 <body>
 <header>
@@ -55,30 +57,30 @@
 <div class="wrap">
   <nav>
     <div class="cat">Compliance e Documentos</div>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#doc-01"><b>DOC-01</b> - Validação NF-e/CT-e + captura de XML/PDF com evidência</a>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#doc-02"><b>DOC-02</b> - Classificação automática de anexos e vínculo operacional (CE/BL/CNTR)</a>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#doc-03"><b>DOC-03</b> - Consulta de status aduaneiro em portais legados e sincronização no CY</a>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#doc-04"><b>DOC-04</b> - Geração automática de dossiê de contêiner (PDF) e distribuição</a>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#doc-05"><b>DOC-05</b> - Leitura de e-mails operacionais e abertura automática de pendências no CY</a>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#doc-06"><b>DOC-06</b> - Checklist de compliance por tipo de carga e bloqueio preventivo de etapas</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#doc-01"><b>DOC-01</b> - Validação NF-e/CT-e + captura de XML/PDF com evidência</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#doc-02"><b>DOC-02</b> - Classificação automática de anexos e vínculo operacional (CE/BL/CNTR)</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#doc-03"><b>DOC-03</b> - Consulta de status aduaneiro em portais legados e sincronização no CY</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#doc-04"><b>DOC-04</b> - Geração automática de dossiê de contêiner (PDF) e distribuição</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#doc-05"><b>DOC-05</b> - Leitura de e-mails operacionais e abertura automática de pendências no CY</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#doc-06"><b>DOC-06</b> - Checklist de compliance por tipo de carga e bloqueio preventivo de etapas</a>
 <div class="cat">Gate e Atendimento</div>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#gate-01"><b>GATE-01</b> - Pré-checagem automática de gate (agendamento, bloqueios e pendências)</a>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#gate-02"><b>GATE-02</b> - Automação de cadastro/atualização de motorista e veículo em portais externos</a>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#gate-03"><b>GATE-03</b> - Emissão automática de etiquetas, recibos e comprovantes (print-to-PDF)</a>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#gate-04"><b>GATE-04</b> - Triagem de exceções de OCR (placa, lacre, numeração) com RPA assistido</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#gate-01"><b>GATE-01</b> - Pré-checagem automática de gate (agendamento, bloqueios e pendências)</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#gate-02"><b>GATE-02</b> - Automação de cadastro/atualização de motorista e veículo em portais externos</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#gate-03"><b>GATE-03</b> - Emissão automática de etiquetas, recibos e comprovantes (print-to-PDF)</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#gate-04"><b>GATE-04</b> - Triagem de exceções de OCR (placa, lacre, numeração) com RPA assistido</a>
 <div class="cat">Integrações e Resiliência</div>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#int-01"><b>INT-01</b> - Reprocesso idempotente de eventos com fila e Dead-Letter (saga/compensação)</a>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#int-02"><b>INT-02</b> - Conciliação diária CY x ERP legado (export de telas/relatórios)</a>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#int-03"><b>INT-03</b> - Robô de monitoramento de indisponibilidade (portais/sistemas) com playbook</a>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#int-04"><b>INT-04</b> - Coleta automática de comprovantes/protocolos e anexo no evento</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#int-01"><b>INT-01</b> - Reprocesso idempotente de eventos com fila e Dead-Letter (saga/compensação)</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#int-02"><b>INT-02</b> - Conciliação diária CY x ERP legado (export de telas/relatórios)</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#int-03"><b>INT-03</b> - Robô de monitoramento de indisponibilidade (portais/sistemas) com playbook</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#int-04"><b>INT-04</b> - Coleta automática de comprovantes/protocolos e anexo no evento</a>
 <div class="cat">Yard e Planejamento</div>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#yard-01"><b>YARD-01</b> - Atualização automática de restrições de pilhas (IMDG/reefer/OOG) por boletins externos</a>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#yard-02"><b>YARD-02</b> - Geração automática de Ordens de Transferência (OT) a partir de lista externa</a>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#yard-03"><b>YARD-03</b> - Auditoria diária de pátio: inconsistências de posição x evidência (câmeras/relatórios)</a>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#yard-04"><b>YARD-04</b> - Execução automatizada de 'modo degradado' para equipamentos (planilha -&gt; Work Queue)</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#yard-01"><b>YARD-01</b> - Atualização automática de restrições de pilhas (IMDG/reefer/OOG) por boletins externos</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#yard-02"><b>YARD-02</b> - Geração automática de Ordens de Transferência (OT) a partir de lista externa</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#yard-03"><b>YARD-03</b> - Auditoria diária de pátio: inconsistências de posição x evidência (câmeras/relatórios)</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#yard-04"><b>YARD-04</b> - Execução automatizada de 'modo degradado' para equipamentos (planilha -&gt; Work Queue)</a>
 <div class="cat">Backoffice e Analytics</div>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#bo-01"><b>BO-01</b> - Fechamento diário automático: geração de relatórios e distribuição para stakeholders</a>
-<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v1.html#bo-02"><b>BO-02</b> - Robô de cadastro em massa (clientes, contratos, tarifas) em sistemas legados</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#bo-01"><b>BO-01</b> - Fechamento diário automático: geração de relatórios e distribuição para stakeholders</a>
+<a href="file:///C:/Users/HxTos/Downloads/Catalogo_RPA_HXtos_CY_v2_singlefile_navfix.html#bo-02"><b>BO-02</b> - Robô de cadastro em massa (clientes, contratos, tarifas) em sistemas legados</a>
   </nav>
 
   <main>
@@ -815,5 +817,59 @@
     <div class="footer">Gerado para HXtos CY • Conteúdo para desenho e treinamento operacional.</div>
   </main>
 </div>
+
+<script>
+(() => {
+  const header = document.querySelector('header');
+  const main = document.querySelector('main');
+  const nav = document.querySelector('nav');
+
+  const headerOffset = () => (header ? header.getBoundingClientRect().height : 0) + 12;
+
+  function isScrollable(el){
+    if(!el) return false;
+    const cs = getComputedStyle(el);
+    return (cs.overflowY === 'auto' || cs.overflowY === 'scroll') && (el.scrollHeight - el.clientHeight) > 2;
+  }
+
+  function scrollToHash(hash, behavior='smooth'){
+    if(!hash) return;
+    const id = decodeURIComponent(hash.replace(/^#/, ''));
+    const target = document.getElementById(id);
+    if(!target) return;
+
+    const off = headerOffset();
+
+    if(isScrollable(main)){
+      // Offset within main scroll container
+      const top = target.offsetTop - off;
+      main.scrollTo({ top: Math.max(0, top), behavior });
+    } else {
+      // Default document scroll
+      const rect = target.getBoundingClientRect();
+      const top = window.scrollY + rect.top - off;
+      window.scrollTo({ top: Math.max(0, top), behavior });
+    }
+  }
+
+  // Intercept in-page nav clicks to ensure consistent behavior across hosting environments
+  nav?.addEventListener('click', (e) => {
+    const a = e.target.closest('a[href^="#"]');
+    if(!a) return;
+    e.preventDefault();
+    const hash = a.getAttribute('href');
+    history.pushState(null, '', hash);
+    scrollToHash(hash, 'smooth');
+  });
+
+  window.addEventListener('hashchange', () => scrollToHash(location.hash, 'auto'));
+
+  // Initial jump (if page is opened already with #hash)
+  if(location.hash){
+    setTimeout(() => scrollToHash(location.hash, 'auto'), 50);
+  }
+})();
+</script>
+
 
 </body></html>
